<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ridexPasajero</string>
    <string name="onboarding_main_1">Donde sea que estes</string>
    <string name="skip">Saltar</string>
    <string name="back">Atrás</string>
    <string name="onboarding_secondary_1">La aplicación que redefine la movilidad urbana. Olvídate de lo convencional, Ridex te conecta con el transporte que necesitas en un instante.</string>
    <string name="onboarding_main_2">En cualquier momento</string>
    <string name="onboarding_secondary_2">Ridex te conecta con el transporte que necesitas, cuando lo necesitas. Olvídate de las esperas innecesarias y haz que cada viaje sea una experiencia cómoda y eficiente.</string>
    <string name="onboarding_main_3">Reserva tu auto</string>
    <string name="onboarding_secondary_3">Ridex pone a tu disposición una variedad de vehículos para adaptarse a tus necesidades de viaje.</string>
    <string name="welcome_main">Bienvenido</string>
    <string name="welcome_secondary">Optimiza tu experiencia de compartir viajes con nuestra aplicación</string>
    <string name="textLogin">Iniciar Sesión</string>
    <string name="textCreateAccount">Crear Cuenta</string>
    <string name="signUpMain">Regístrate con tu email o número de celular</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintEmail">Email</string>
    <string name="hintCelular">Tu número de celular</string>
    <string name="privacy">Al registrarte, aceptas los Términos de servicio y la Política de privacidad.</string>
    <string name="signupgoogle">Registrarse con Google</string>
    <string name="signupface">Registrarse con Facebook</string>
    <string name="signupapple">Registrarse con Apple</string>
    <string name="haveanaccount">¿Ya tienes una cuenta?</string>
    <string name="otpver">Verificación OTP</string>
    <string name="enterotp">Ingresa tu código OTP</string>
    <string name="norecieveopt">No recibiste el código</string>
    <string name="reenviar">Volver a enviar</string>
    <string name="verify">Verificar</string>
    <string name="setpassword">Establecer contraseña</string>
    <string name="setyourpassword">Establece tu contraseña</string>
    <string name="enterpassword">Ingresar Contraseña</string>
    <string name="confirmpassword">Confirmar Contraseña</string>
    <string name="validatepassword">Al menos un numero o caracter especial</string>
    <string name="register">Registrar</string>
    <string name="signinMain">Inicia sesión con tu email o número de celular</string>
    <string name="hintLoginCelular">Email o número de celular</string>
    <string name="hintLoginPassword">Ingresa tu contraseña</string>
    <string name="donthaveanaccount">¿No tienes una cuenta?</string>
    <string name="forgotpassword">¿Olvidaste tu contraseña?</string>
    <string name="signingoogle">Ingresar con Google</string>
    <string name="signinface">Ingresar con Facebook</string>
    <string name="signinapple">Ingresar con Apple</string>
    <string name="verificationpasswordotp">Ingresar email o número de celular</string>
    <string name="enviarotp">Enviar OTP</string>
    <string name="setnewpassword">Establecer nueva contraseña</string>
    <string name="setyoutnewpassword">Establece tu nueva contraseña</string>
    <string name="save">Guardar</string>
    <string name="profile">Perfil</string>
    <string name="fullname">Nombre Completo</string>
    <string name="street">Dirección</string>
    <string name="city">Ciudad</string>
    <string name="cancel">Cancelar</string>
    <string name="carnamedemo">Mustang Shelby GT</string>
    <string name="rating">4.9 (531 reviews)</string>
    <string name="especificaciones">Especificaciones</string>
    <string name="maxpower">Poder Max.</string>
    <string name="power">2500hp</string>
    <string name="features">Características</string>
    <string name="fuel">Combustible</string>
    <string name="fuel_desc">10km por ltr</string>
    <string name="speed">Vel Max.</string>
    <string name="speed_desc">300kmh</string>
    <string name="mph">0-100kmh</string>
    <string name="mph_desc">1.5sec</string>
    <string name="model">Modelo</string>
    <string name="model_desc">GT5000</string>
    <string name="capacity">Capacidad</string>
    <string name="capacity_desc">760hp</string>
    <string name="color">Color</string>
    <string name="color_desc">Rojo</string>
    <string name="fueltype">Tipo de Combustible</string>
    <string name="fueltype_desc">Octane</string>
    <string name="motor">Motor</string>
    <string name="motor_desc">Automático</string>
    <string name="ridenow">Viajar Ahora</string>
    <string name="confirmpayment">Confirmar Pago</string>
    <string name="currentlocation">Ubicación actual</string>
    <string name="currentlocation_desc">2972 Westheimer Rd. Santa Ana, Illinois 85486 </string>
    <string name="destinylocation">Ubicación Destino</string>
    <string name="destinylocation_desc">1901 Thornridge Cir. Shiloh, Hawaii 81063</string>
    <string name="pricetrip">Valor del viaje</string>
    <string name="pricetrip_desc">$10</string>
    <string name="selectpayment">Seleccionar método de pago</string>
    <string name="paymentnumber">**** **** **** 8970</string>
    <string name="expire">Expira: 12/26</string>
    <string name="email_desc">correo@correo.com</string>
    <string name="cash">Efectivo</string>
    <string name="thanks">Gracias</string>
    <string name="thanks_rideconfirm">Tú viaje ha sido confirmado</string>
    <string name="setting">Configuración</string>
    <string name="changepassword">Cambiar contraseña</string>
    <string name="privacypolicy">Politica de privacidad</string>
    <string name="privacypolicyridex">Politica de privacidad para Ridex</string>
    <string name="privacypolicy_desc">At Rideshare, accessible from rideshare.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by rideshare and how we use it.
If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.
This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in rideshare. This policy is not applicable to any information collected offline or via channels other than this website. Our Privacy Policy was created with the help of the Free Privacy Policy Generator.</string>
    <string name="contactus">Contactanos</string>
    <string name="contactusridex">Contactanos Ridex</string>
    <string name="address">House# 72, Road# 21, Banani, Dhaka-1213 (near Banani Bidyaniketon School College, beside University of South Asia)</string>
    <string name="addressText">Dirección</string>
    <string name="callridex">Llamanos : 13301 (24/7)</string>
    <string name="emailridex">Email : support@pathao.com</string>
    <string name="deleteaccount">Eliminar cuenta</string>
    <string name="newpassword">Nueva contraseña</string>
    <string name="oldpassword">Contraseña vieja</string>
    <string name="helpsupport">Ayuda y Soporte</string>
    <string name="helpsupportridex">Ayuda y Soporte Ridex</string>
    <string name="deleteaccount_desc">¿Estás seguro/a de que deseas eliminar tu cuenta? Por favor, lee cómo afectará la eliminación de la cuenta.
        Eliminar tu cuenta eliminará la información personal de nuestra base de datos. Tu correo electrónico quedará permanentemente reservado y no se podrá volver a utilizar para registrar una nueva cuenta.</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur. Sit pulvinar mauris mauris eu nibh semper nisl pretium laoreet. Sed non faucibus ac lectus eu arcu. Nulla sit congue facilisis vestibulum egestas nisl feugiat pharetra. Odio sit tortor morbi at orci ipsum dapibus interdum. Lorem felis est aliquet arcu nullam pellentesque. Et habitasse ac arcu et nunc euismod rhoncus facilisis sollicitudin.</string>
    <string name="sendmessage">Enviar mensaje</string>
    <string name="writemessage">Escribe un mensaje</string>
    <string name="historial">Historial</string>
    <string name="upcoming">Próximos</string>
    <string name="completed">Completados</string>
    <string name="cancelled">Cancelados</string>
    <string name="enableLocation">Habilitar Ubicación</string>
    <string name="enableLocation_desc">Elige tu ubicación para comenzar a buscar la solicitud cerca de ti.</string>
    <string name="allowLocation">Usar mi ubicación</string>
    <string name="chat">Chat</string>
    <string name="paysuccess">Pago Exitoso</string>
    <string name="paysuccess_desc">El pago se ha realizado exitosamente</string>
    <string name="amount">Cantidad</string>
    <string name="howwasthetrip">¿Cómo estuvo el viaje?</string>
    <string name="howwasthetrip_desc">Tu retroalimentación nos ayudará a mejorar tu experiencia de viaje.</string>
    <string name="feedback">Feedback</string>
    <string name="sendfeedback">Enviar Feedback</string>
    <string name="writecomment">Envia tu comentario</string>
    <string name="thanksfeedback">Gracias por tu comentario, lo tendremos en cuenta</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="config">Config</string>
    <string name="transactions">Transacciones</string>
    <string name="addmethodpay">Añadir metodo de pago</string>
    <string name="savingmethods">Metodos de Pago</string>
    <string name="numberaccount">Numero de Cuenta</string>
    <string name="savepaymethod">Guardar Metodo de Pago</string>
    <string name="methodadded">Metodo Añadido</string>
    <string name="methodadded_desc">Metodo Añadido Exitosamente</string>
    <string name="selectAddress">Seleccionar Dirección</string>
    <string name="recentplaces">Lugares Recientes</string>
    <string name="confirmtrip">Confirmar Viaje</string>
    <string name="call">Llamar</string>
    <string name="message">Chat</string>
    <string name="title_activity_deleteaccount">DeleteaccountActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="numeros">
        <item>+1 (Estados Unidos)</item>
        <item>+44 (Reino Unido)</item>
        <item>+81 (Japón)</item>
        <item>+86 (China)</item>
        <item>+91 (India)</item>
        <item>+33 (Francia)</item>
        <item>+49 (Alemania)</item>
        <item>+39 (Italia)</item>
        <item>+34 (España)</item>
        <item>+55 (Brasil)</item>
        <item>+7 (Rusia)</item>
        <item>+20 (Egipto)</item>
        <item>+27 (Sudáfrica)</item>
        <item>+82 (Corea del Sur)</item>
        <item>+61 (Australia)</item>
        <item>+52 (México)</item>
        <item>+55 (Brasil)</item>
        <item>+234 (Nigeria)</item>
        <item>+971 (Emiratos Árabes Unidos)</item>
        <item>+62 (Indonesia)</item>
        
    </string-array>
</resources>