<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintVertical_bias="0.03"
        android:orientation="horizontal"
        android:gravity="start|center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/gray"
            android:text="@string/back"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:drawableStart="@drawable/back"
            android:fontFamily="@font/poppinsmedium"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/changepassword"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        app:layout_constraintVertical_bias="0.02" />


    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.02">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/input_background"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/oldpassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColorHint="@color/lightGray" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_background"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/newpassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColorHint="@color/lightGray" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_background"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/confirmpassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColorHint="@color/lightGray" />


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:width="0dp"
        android:background="@drawable/btn_background_primary"
        android:fontFamily="@font/poppinsmedium"
        android:paddingVertical="15dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />



</androidx.constraintlayout.widget.ConstraintLayout>